# amigafm

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  RELEASE_NOTES.md  build.rs  readme.md
installer/: amigafm.iss
scripts/: build-release.ps1
src/: main.rs  nvda.rs
x64/: nvdaControllerClient.exp  nvdaControllerClient.lib
